--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,14 @@ body
 background-color: blueviolet;   
 }
 image
-h1
+h1{
+
+}
+h2
 {
-color: blue;   
+    color: brown;
+}
+h3
+{
+    color: blue;
 }
