--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,10 @@ body
 {
 background-color: blueviolet;   
 }
-image
+img
+{
+border-style: solid;border-width: 3mm;
+}
 h1{
 
 }
@@ -13,4 +16,8 @@ h2
 h3
 {
     color: blue;
+}
+h1
+{
+    color: darkblue;text-align: center;
 }
