--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,20 @@
-body
-{
-background-color: gray;
-text-align: left; 
+body {
+  background-color: gray;
+  text-align: left;
 }
-img
-{
-border-style: solid;border-width: 4mm;
+img {
+  border-style: solid;
+  border-width: 4mm;
 }
-h1{
-
+h1 {
 }
-h2
-{
-    color: brown;
+h2 {
+  color: brown;
 }
-h3
-{
-    color: blue;
+h3 {
+  color: blue;
 }
-h1
-{
-    color: darkblue;text-align: center;
+h1 {
+  color: darkblue;
+  text-align: center;
 }
